add_library(geometry
    aabb.cpp
    arithmetic.cpp
    common.cpp
    intersection.cpp
    kdtree.cpp
    line.cpp
    matrix.cpp
    point.cpp
    pointset.cpp
    polygon.cpp
    polytope.cpp
    predicate.cpp
    quadedge.cpp
    sphere.cpp
    spherical_harmonics.cpp
    spline.cpp
    terrain.cpp
    triangle.cpp
    triangle_soup.cpp
    triangulation.cpp
    vector.h
    visual.cpp
    wedge.cpp
)
