#==============================================================================
# @author Clinton Freeman
# @date 2014-03-18
#==============================================================================

add_library(mathlib 
    ml_common.cpp
    ml_cone.cpp
    ml_intersection.cpp
    ml_line.cpp
    ml_matrix.cpp
    ml_observer.cpp
    ml_point.cpp
    ml_polygon.cpp
    ml_polytope.cpp
    ml_quadrilateral.cpp
    ml_triangle.cpp
    ml_vector.h
    ml_wedge.cpp
)
